--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Favicon -->
+    <link rel="icon" type="image/vnd.microsoft.icon" href="images/favicon.ico">
+    <!-- Meta Description -->
+    <meta name="description" content="Las mejores cervezas artesanales del barrio de Versalles, todos los estilos y la mejor calidad. ¡Pedí tu favorita ahora!">
+    <!-- Meta keywords -->
+    <meta name="keywords" content="cerveza, cervezas, versalles, artesanal, estilos,alcohol, entrega, delivery, encargo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <title>PreEntrega-SantiagoPorta</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Cerveza Versalles | Cerveza Artesanal | Inicio</title>
+
 </head>
 <body>
     <header>
@@ -40,21 +47,21 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="images/cerveza1.jpg" class="d-block w-100" alt="1">
+                <img src="images/cerveza1.jpg" class="d-block w-100" alt="producto-1">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Stout</h5>
                   <p>$639</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cerveza2.png" class="d-block w-100" alt="2">
+                <img src="images/cerveza2.png" class="d-block w-100" alt="producto-2">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>American Lager</h5>
                   <p>$559</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="images/cerveza3.png" class="d-block w-100" alt="3">
+                <img src="images/cerveza3.png" class="d-block w-100" alt="producto-3">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Irish Red Ale</h5>
                   <p>$639</p>
