--- a/pages/TiendaOnline.html
+++ b/pages/TiendaOnline.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Tienda Online</title>
 </head>
 <body>
@@ -33,15 +34,15 @@
 
    <section class="productosContenedor">
         <div>
-            <img class="imagen-producto" src="/images/cerveza1.jpg" alt="one">
+            <img class="imagen-producto" src="/images/cerveza1.jpg" alt="producto-1">
             <p class="texto-producto">Stout - $639</p>
         </div>
         <div>
-            <img class="imagen-producto" src="/images/cerveza2.png" alt="two">
+            <img class="imagen-producto" src="/images/cerveza2.png" alt="producto-2">
             <p class="texto-producto">American Lager - $559</p>
         </div>
         <div>
-            <img class="imagen-producto" src="/images/cerveza3.png" alt="three">
+            <img class="imagen-producto" src="/images/cerveza3.png" alt="producto-3">
             <p class="texto-producto">Irish Red Ale - $639</p>
         </div>
     </section>
