--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Meta Description -->
     <meta name="description" content="Las mejores cervezas artesanales del barrio de Versalles, todos los estilos y la mejor calidad. ¡Pedí tu favorita ahora!">
     <!-- Meta keywords -->
-    <meta name="keywords" content="cerveza, cervezas, versalles, artesanal, estilos,alcohol, entrega, delivery, encargo">
+    <meta name="keywords" content="cerveza, cervezas, versalles, artesanal, artesanales, estilos, alcohol, entrega, delivery, encargo">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <title>Cerveza Versalles | Cerveza Artesanal | Inicio</title>
