--- a/pages/TiendaOnline.html
+++ b/pages/TiendaOnline.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico">
+    <meta name="description" content="Encargá tu estilo favorito de la mejor marca artesanal">
+    <meta name="keywords" content="cerveza, cervezas, artesanal, artesanales, versalles, compra, pedidos, encargo, encargos, estilos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Tienda Online</title>
