Ultimos cambios proyecto final

--- a/pages/Contactanos.html
+++ b/pages/Contactanos.html
@@ -35,7 +35,7 @@
    </header>
 
 
-   <h2 class="formulario">Formulario de contacto</h2>
+   <h2 class="formulario">Contactanos</h2>
         <div class="campoformulario">
             <form>
                 <!-- Name input -->
@@ -65,7 +65,7 @@
                 <div class="form-check d-flex justify-content-center mb-4">
                   <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
                   <label class="form-check-label" for="form4Example4">
-                    Acepto Término y Condiciones
+                    Acepto Términos y Condiciones
                   </label>
                 </div>
 
@@ -74,14 +74,19 @@
               </form>
         </div>
 
-   <footer class="pieDePagina">
-        <nav>
-            <ul>
-                <a href=""><img src="../images/face-01.png" class="iconosRedes" alt="facebooklogo"></a>
-                <a href=""><img src="../images/insta-01.png" class="iconosRedes" alt="instagramlogo"></a>
-            </ul>
-        </nav>
-    </footer>
+        <footer>
+            <nav class="footer">
+                <ul class="margen">
+                    <p>Telefono: 15 5355-5535</p>
+                    <a href=""><p>info@cervezaversalles.com</p></a>
+                    <div class="redes">
+                      <a href="https://www.facebook.com/"><img src="../images/face-01.png" alt="facebooklogo"></a>
+                      <a href="https://www.instagram.com"><img src="../images/insta-01.png" alt="instagramlogo"></a>
+                    </div>               
+                </ul>
+            </nav>
+        </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
