--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Cerveza Versalles | Cerveza Artesanal | Inicio</title>
 
 </head>
-<body>
+<body class="margen">
     <header>
             <nav class="navbarra">
                 <ul>
@@ -37,6 +37,12 @@
                 </ul>
             </nav>
     </header>
+  
+    <div class="div-h1">
+      <h1 class="h1-index">Cerveza Versalles</h1>
+      <p>Las mejores cervezas artesanales del barrio de Versalles, todos los estilos y la mejor calidad. ¡Pedí tu favorita ahora!</p>
+    </div>
+
     <h2 class="h2-index">Nuestros productos mas vendidos</h2>
     <section class="inicioContenedor">
         <div id="carouselExampleCaptions" class="carousel slide w-50">
@@ -79,14 +85,19 @@
           </div>
     </section>
 
-   <footer class="pieDePagina">
-        <nav>
-            <ul>
-                <a href=""><img src="./images/face-01.png" class="iconosRedes" alt="facebooklogo"></a>
-                <a href=""><img src="./images/insta-01.png" class="iconosRedes" alt="instagramlogo"></a>
+    <footer>
+        <nav class="footer">
+            <ul class="margen">
+                <p>Telefono: 15 5355-5535</p>
+                <a href=""><p>info@cervezaversalles.com</p></a>
+                <div class="redes">
+                  <a href="https://www.facebook.com/"><img src="./images/face-01.png" alt="facebooklogo"></a>
+                  <a href="https://www.instagram.com"><img src="./images/insta-01.png" alt="instagramlogo"></a>
+                </div>               
             </ul>
         </nav>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
 </body>
