--- a/pages/DondeEncontrarnos.html
+++ b/pages/DondeEncontrarnos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico">
     <meta name="description" content="Averiguá tu punto de venta mas cercano">
     <meta name="keywords" content="cerveza, cervezas, artesanal, artesanales, versalles, mapa, local, bar">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Dónde Encontrarnos</title>
 </head>
+
 <body>
-    <header> 
+    <header>
         <nav class="navbarra">
             <ul>
                 <li>
@@ -32,19 +35,34 @@
                 </li>
             </ul>
         </nav>
-   </header>
+    </header>
 
-   <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d33092.93471861046!2d-58.553419405940694!3d-34.62350105706573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc82d9d0b7425%3A0x1b69795d5c1441f6!2zUGl6emVyw61hIEVsIEZvcnTDrW4!5e0!3m2!1sen!2sar!4v1679010304734!5m2!1sen!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
-   
+    <h2 class="buscanos">Visitá nuestro local</h2>
 
-   <footer class="pieDePagina">
-        <nav>
-            <ul>
-                <a href=""><img src="../images/face-01.png" class="iconosRedes" alt="facebooklogo"></a>
-                <a href=""><img src="../images/insta-01.png" class="iconosRedes" alt="instagramlogo"></a>
+    <iframe class="mapa"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d33092.93471861046!2d-58.553419405940694!3d-34.62350105706573!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc82d9d0b7425%3A0x1b69795d5c1441f6!2zUGl6emVyw61hIEVsIEZvcnTDrW4!5e0!3m2!1sen!2sar!4v1679010304734!5m2!1sen!2sar"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>"
+
+
+    <footer>
+        <nav class="footer">
+            <ul class="margen">
+                <p>Telefono: 15 5355-5535</p>
+                <a href="">
+                    <p>info@cervezaversalles.com</p>
+                </a>
+                <div class="redes">
+                    <a href="https://www.facebook.com/"><img src="../images/face-01.png" alt="facebooklogo"></a>
+                    <a href="https://www.instagram.com"><img src="../images/insta-01.png" alt="instagramlogo"></a>
+                </div>
             </ul>
         </nav>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
