--- a/pages/SobreNosotros.html
+++ b/pages/SobreNosotros.html
@@ -35,7 +35,7 @@
    </header>
 
     <main class="grid-container">
-    <h4 class="div1">Cerveza Versalles</h4>
+    <h2 class="div1">Nosotros</h2>
     <iframe class="div2" width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     <h2 class="div3">El Equipo</h2>
     <p class="div3info"> 
@@ -46,15 +46,23 @@
         Salud!
         </p>
     </main>
+    
+    <div><img class="imgfabrica" src="../images/fabrica-de-cerveza-artesanal.jpg" alt="fabricafoto"></div>
 
-   <footer class="pieDePagina">
-        <nav>
-            <ul>
-                <a href=""><img src="../images/face-01.png" class="iconosRedes" alt="facebooklogo"></a>
-                <a href=""><img src="../images/insta-01.png" class="iconosRedes" alt="instagramlogo"></a>
+
+    <footer>
+        <nav class="footer">
+            <ul class="margen">
+                <p>Telefono: 15 5355-5535</p>
+                <a href=""><p>info@cervezaversalles.com</p></a>
+                <div class="redes">
+                  <a href="https://www.facebook.com/"><img src="../images/face-01.png" alt="facebooklogo"></a>
+                  <a href="https://www.instagram.com"><img src="../images/insta-01.png" alt="instagramlogo"></a>
+                </div>               
             </ul>
         </nav>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
