--- a/pages/TiendaOnline.html
+++ b/pages/TiendaOnline.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/vnd.microsoft.icon" href="../images/favicon.ico">
     <meta name="description" content="Encargá tu estilo favorito de la mejor marca artesanal">
-    <meta name="keywords" content="cerveza, cervezas, artesanal, artesanales, versalles, compra, pedidos, encargo, encargos, estilos">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <meta name="keywords"
+        content="cerveza, cervezas, artesanal, artesanales, versalles, compra, pedidos, encargo, encargos, estilos">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Tienda Online</title>
 </head>
+
 <body>
-    <header> 
+    <header>
         <nav class="navbarra">
             <ul>
                 <li>
@@ -32,31 +36,53 @@
                 </li>
             </ul>
         </nav>
-   </header>
+    </header>
+    
+    <div class="div-h2">
+        <h2 class="h2-tienda">Nuestras cervezas</h2>
+    </div>
 
-   <section class="productosContenedor">
+    <main class="productos-contenedor">
         <div>
-            <img class="imagen-producto" src="/images/cerveza1.jpg" alt="producto-1">
+            <img class="prod-grid1 prod-grid" src="/images/cerveza1.jpg" alt="product1">
             <p class="texto-producto">Stout - $639</p>
         </div>
-        <div>
-            <img class="imagen-producto" src="/images/cerveza2.png" alt="producto-2">
+        <div><img class="prod-grid2 prod-grid" src="/images/cerveza2.png" alt="product2">
             <p class="texto-producto">American Lager - $559</p>
         </div>
-        <div>
-            <img class="imagen-producto" src="/images/cerveza3.png" alt="producto-3">
+        <div><img class="prod-grid3 prod-grid" src="/images/cerveza3.png" alt="product3">
             <p class="texto-producto">Irish Red Ale - $639</p>
         </div>
-    </section>
+        <div><img class="prod-grid4 prod-grid" src="/images/cerveza4.jpg" alt="product4">
+            <p class="texto-producto">IPA - $609</p>
+        </div>
+        <div><img class="prod-grid5 prod-grid" src="/images/cerveza5.png" alt="product5">
+            <p class="texto-producto">Pale Ale - $579</p>
+        </div>
+        <div><img class="prod-grid6 prod-grid" src="/images/cerveza6.jpg" alt="product6">
+            <p class="texto-producto">Blonde Ale - $549</p>
+        </div>
+    </main>
 
-    <footer class="pieDePagina">
-        <nav>
-            <ul>
-                <a href=""><img src="../images/face-01.png" class="iconosRedes" alt="facebooklogo"></a>
-                <a href=""><img src="../images/insta-01.png" class="iconosRedes" alt="instagramlogo"></a>
+
+    <footer>
+        <nav class="footer">
+            <ul class="margen">
+                <p>Telefono: 15 5355-5535</p>
+                <a href="">
+                    <p>info@cervezaversalles.com</p>
+                </a>
+                <div class="redes">
+                    <a href="https://www.facebook.com/"><img src="../images/face-01.png" alt="facebooklogo"></a>
+                    <a href="https://www.instagram.com"><img src="../images/insta-01.png" alt="instagramlogo"></a>
+                </div>
             </ul>
         </nav>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
